--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="zh-HK">
 <head>
 <meta charset="UTF-8">
-<title>2026 札幌雪祭｜雙頁籤互動行程</title>
+<title>2026 札幌雪祭｜保證點得到的最終版</title>
 <style>
     body{margin:0;font-family:"Playfair Display",serif;background:#FFFFF0;color:#333;}
-    .header{background:linear-gradient(135deg,#4682B4,#FFD700);color:white;padding:2.5rem 1rem;text-align:center;}
-    .tabs{max-width:1500px;margin:2rem auto;display:flex;border-bottom:3px solid #FFD700;}
-    .tab-btn{background:#fff;padding:1rem 2rem;font-size:1.3rem;cursor:pointer;border-radius:12px 12px 0 0;margin:0 0.5rem;}
+    .header{background:linear-gradient(135deg,#4682B4,#FFD700);color:white;padding:3rem 1rem;text-align:center;}
+    .tabs{max-width:1500px;margin:2rem auto;display:flex;justify-content:center;border-bottom:3px solid #FFD700;}
+    .tab-btn{background:#fff;padding:1.2rem 3rem;font-size:1.4rem;cursor:pointer;border-radius:15px 15px 0 0;margin:0 1rem;box-shadow:0 4px 10px rgba(0,0,0,0.1);}
     .tab-btn.active{background:#FFD700;color:#333;font-weight:bold;}
     .content{max-width:1500px;margin:2rem auto;padding:0 1rem;display:none;}
     .content.active{display:block;}
-    .main{display:grid;grid-template-columns:1fr 520px;gap:2rem;}
-    .day{background:white;padding:2rem;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,0.12);
-         margin-bottom:1.8rem;border-left:8px solid #FFD700;cursor:pointer;transition:0.4s;}
-    .day:hover{transform:translateY(-10px);box-shadow:0 20px 40px rgba(0,0,0,0.2);}
-    #map{height:600px;border:6px solid #4682B4;border-radius:20px;}
-    .detail-day{background:white;padding:2.5rem;border-radius:20px;box-shadow:0 12px 40px rgba(0,0,0,0.15);margin:2rem 0;}
-    .step{margin:1.5rem 0;padding:1.2rem;background:#f8fbff;border-left:6px solid #4682B4;border-radius:10px;}
-    .distance{color:#d35400;font-weight:bold;}
+    .main{display:grid;grid-template-columns:1fr 540px;gap:2rem;}
+    .day{background:white;padding:2.5rem;border-radius:20px;box-shadow:0 12px 35px rgba(0,0,0,0.12);
+         margin-bottom:2rem;border-left:10px solid #FFD700;position:relative;}
+    .day:hover{transform:translateY(-10px);}
+    .big-btn{background:#FFD700;color:#333;padding:1.2rem;font-size:1.4rem;width:100%;border:none;
+             border-radius:12px;margin-top:1.5rem;cursor:pointer;font-weight:bold;box-shadow:0 6px 15px rgba(0,0,0,0.2);}
+    .big-btn:hover{background:#FFA500;color:white;}
+    #map{height:620px;border:6px solid #4682B4;border-radius:22px;}
+    .detail-day{background:white;padding:3rem;border-radius:25px;box-shadow:0 15px 45px rgba(0,0,0,0.15);margin:2rem 0;}
+    .step{margin:1.8rem 0;padding:1.5rem;background:#f0f8ff;border-left:7px solid #4682B4;border-radius:12px;font-size:1.1rem;}
+    .distance{color:#e74c3c;font-weight:bold;font-size:1.2rem;}
     @media(max-width:960px){.main{grid-template-columns:1fr;}}
 </style>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
@@ -27,8 +30,8 @@
 <body>
 
 <div class="header">
-    <h1>2026 札幌雪祭 7 天完美行程</h1>
-    <p>1月30日 – 2月5日｜點擊卡片 → 地圖飛過去｜點「詳細」看距離＋小貼士</p>
+    <h1>2026 札幌雪祭 7 天行程</h1>
+    <p style="font-size:1.5rem;">點下方金色大按鈕 → 看詳細動線與距離</p>
 </div>
 
 <div class="tabs">
@@ -39,37 +42,57 @@
 <!-- Tab 1: 總覽 -->
 <div id="overview" class="content active">
     <div class="main">
-        <div id="list">
-            <div class="day" onclick="showDetail(1)" data-center="43.0628,141.3544" data-zoom="14">
-                <h3>1月30日（五）Day 1｜抵達＋電視塔夜景</h3><small>點擊看詳細距離</small>
+        <div>
+            <div class="day">
+                <h3>1月30日（五）Day 1｜抵達＋電視塔夜景</h3>
+                <p>新千歲機場 → 札幌站 → 電視塔</p>
+                <button class="big-btn" onclick="showDetail(1)">查看詳細距離與交通</button>
             </div>
-            <div class="day" onclick="showDetail(2)" data-center="43.198,140.994" data-zoom="14">
+
+            <div class="day">
                 <h3>1月31日（六）Day 2｜小樽運河浪漫</h3>
+                <p>JR 35分直達 → 運河散策 → LeTAO</p>
+                <button class="big-btn" onclick="showDetail(2)">查看詳細距離與交通</button>
             </div>
-            <div class="day" onclick="showDetail(3)" data-center="43.070,141.367" data-zoom="14">
+
+            <div class="day">
                 <h3>2月1日（日）Day 3｜啤酒博物館＋狸小路</h3>
+                <p>地鐵到啤酒園 → 午餐試飲 → 狸小路血拼</p>
+                <button class="big-btn" onclick="showDetail(3)">查看詳細距離與交通</button>
             </div>
-            <div class="day" onclick="showDetail(4)" data-center="43.031,141.302" data-zoom="14">
+
+            <div class="day">
                 <h3>2月2日（一）Day 4｜藻岩山夜景</h3>
+                <p>市電＋免費接駁 → 纜車上山</p>
+                <button class="big-btn" onclick="showDetail(4)">查看詳細距離與交通</button>
             </div>
-            <div class="day" onclick="showDetail(5)" data-center="42.997,141.192" data-zoom="13">
+
+            <div class="day">
                 <h3>2月3日（二）Day 5｜定山溪溫泉</h3>
+                <p>直達巴士60分 → 泡湯放空</p>
+                <button class="big-btn" onclick="showDetail(5)">查看詳細距離與交通</button>
             </div>
-            <div class="day" onclick="showDetail(6)" data-center="43.0554,141.353" data-zoom="16" style="border-left:14px solid #FF4500;">
+
+            <div class="day" style="border-left:16px solid #e74c3c;">
                 <h3>2月4日（三）Day 6｜2026雪祭開幕日全天狂歡！</h3>
+                <p>大通會場＋薄野冰雕＋Tsudome</p>
+                <button class="big-btn" style="background:#e74c3c;color:white;" onclick="showDetail(6)">立即查看雪祭詳細動線</button>
             </div>
-            <div class="day" onclick="showDetail(7)" data-center="43.0628,141.3544" data-zoom="14">
+
+            <div class="day">
                 <h3>2月5日（四）Day 7｜掃貨＋返程</h3>
+                <p>JR Tower → 百貨 → 新千歲機場</p>
+                <button class="big-btn" onclick="showDetail(7)">查看詳細距離與交通</button>
             </div>
         </div>
 
         <div>
             <div id="map"></div>
-            <div class="budget" style="margin-top:1.5rem;padding:2rem;background:#4682B4;color:white;border-radius:20px;text-align:center;">
-                <h3>2026雪祭7天預算（港幣）</h3>
-                人數 <input type="number" id="p" value="2" min="1" style="padding:0.6rem;width:80px;">
-                <button onclick="calc()" style="background:#FFD700;padding:0.8rem 2rem;border:none;border-radius:12px;margin-left:1rem;">計算</button>
-                <p id="out" style="font-size:2.2rem;margin:1.5rem 0;font-weight:bold;color:#FFD700;">HK$12,800（2人）</p>
+            <div style="margin-top:1.5rem;padding:2rem;background:#4682B4;color:white;border-radius:20px;text-align:center;">
+                <h3>2026雪祭預算（港幣）</h3>
+                人數 <input type="number" id="p" value="2" min="1" style="padding:0.8rem;width:90px;">
+                <button onclick="calc()" style="background:#FFD700;padding:0.9rem 2rem;border:none;border-radius:12px;margin-left:1rem;font-size:1.1rem;">計算</button>
+                <p id="out" style="font-size:2.4rem;margin:2rem 0;font-weight:bold;color:#FFD700;">HK$12,800（2人）</p>
             </div>
         </div>
     </div>
@@ -77,116 +100,83 @@
 
 <!-- Tab 2: 詳細日程表 -->
 <div id="details" class="content">
-
-    <div id="detail-content">
-        <h2 style="text-align:center;color:#d35400;">請在左邊「總覽」頁籤點選一天查看詳細行程</h2>
+    <div id="detail-content" style="min-height:800px;">
+        <h2 style="text-align:center;padding:3rem;color:#95a5a6;">← 請點左邊任一天的金色大按鈕查看詳細動線</h2>
     </div>
-
-    <!-- 詳細日程資料（隱藏在 JS 裡，點卡片會自動顯示）
-    <script>
-        const dayDetails = {
-            1: `
-                <div class="detail-day">
-                    <h2>1月30日（五）Day 1｜抵達＋電視塔夜景</h2>
-                    <div class="step">新千歲機場 CTS → JR快速Airport（37分鐘，¥1,150）→ 札幌站</div>
-                    <div class="step">札幌站 → 步行6分鐘 → 大通公園</div>
-                    <div class="step">大通公園 → 步行3分鐘 → <b>札幌電視塔</b>（門票¥1,200，夜景超美！）</div>
-                    <div class="step"><span class="distance">全天總步行距離約 2.5 km</span> · 非常輕鬆</div>
-                </div>`,
-            2: `
-                <div class="detail-day">
-                    <h2>1月31日（六）Day 2｜小樽運河</h2>
-                    <div class="step">札幌站 → JR快速（35分鐘，¥750）→ 小樽站</div>
-                    <div class="step">小樽站 → 步行10分鐘 → 小樽運河</div>
-                    <div class="step">運河沿線：北一硝子 → 音樂盒博物館 → LeTAO 本店（排隊買蛋糕）</div>
-                    <div class="step">傍晚回程：小樽站 → JR（35分鐘）→ 札幌</div>
-                    <div class="step"><span class="distance">小樽市內步行約 4 km</span> · 穿舒適鞋</div>
-                </div>`,
-            3: `
-                <div class="detail-day">
-                    <h2>2月1日（日）Day 3｜啤酒博物館＋狸小路</h2>
-                    <div class="step">札幌站 → 地鐵東豐線（6站，¥290）→ 榮町站 → 步行10分鐘 → 札幌啤酒博物館</div>
-                    <div class="step">博物館內可試飲＋成吉思汗午餐（¥2,000左右）</div>
-                    <div class="step">博物館 → 地鐵（8站）→ 大通站 → 狸小路商店街血拼</div>
-                    <div class="step"><span class="distance">全天步行約 5–6 km</span></div>
-                </div>`,
-            4: `
-                <div class="detail-day">
-                    <h2>2月2日（一）Day 4｜藻岩山夜景</h2>
-                    <div class="step">市電「ロープウェイ入口」站 → 免費接駁巴士（每20分一班）→ 藻岩山纜車站</div>
-                    <div class="step">纜車＋迷你纜車來回 ¥2,100（日本新三大夜景！）</div>
-                    <div class="step">下山後可直接搭巴士到定山溪溫泉（約50分鐘）</div>
-                    <div class="step"><span class="distance">市區步行少，主要靠交通工具</span></div>
-                </div>`,
-            5: `
-                <div class="detail-day">
-                    <h2>2月3日（二）Day 5｜定山溪溫泉</h2>
-                    <div class="step">札幌站巴士中心 → かっぱライナー號（60分鐘，¥1,800）→ 定山溪</div>
-                    <div class="step">溫泉街散步、足湯咖啡廳、紅葉峽</div>
-                    <div class="step">推薦日歸溫泉或直接住一晚（超放鬆）</div>
-                    <div class="step"><span class="distance">溫泉街步行約 2–3 km</span></div>
-                </div>`,
-            6: `
-                <div class="detail-day">
-                    <h2>2月4日（三）Day 6｜2026雪祭開幕日！</h2>
-                    <div class="step">全天在大通公園 1–12丁目（步行範圍內）</div>
-                    <div class="step">中午可去 Tsudome 玩雪滑梯（地鐵＋步行15分鐘）</div>
-                    <div class="step">傍晚到薄野看冰雕（地鐵2站）</div>
-                    <div class="step">17:00後回大通拍投影Mapping秀（最美時刻！）</div>
-                    <div class="step"><span class="distance">全天步行約 8–10 km</span> · 記得穿雪靴＋暖包</div>
-                </div>`,
-            7: `
-                <div class="detail-day">
-                    <h2>2月5日（四）Day 7｜掃貨＋返程</h2>
-                    <div class="step">早上 JR Tower T38 俯瞰雪祭全景</div>
-                    <div class="step">Stellar Place、ESTA、大丸百貨瘋狂購物</div>
-                    <div class="step">中午前退房 → JR → 新千歲機場（37分鐘）</div>
-                    <div class="step">機場 Royce 巧克力天堂＋Outlet 最後一波</div>
-                    <div class="step"><span class="distance">市區步行約 4 km + 機場逛街</span></div>
-                </div>`
-        };
-
-        function showDetail(day){
-            document.getElementById('detail-content').innerHTML = dayDetails[day];
-            document.querySelectorAll('.tab-btn')[0].classList.remove('active');
-            document.querySelectorAll('.tab-btn')[1].classList.add('active');
-            document.getElementById('overview').classList.remove('active');
-            document.getElementById('details').classList.add('active');
-            window.scrollTo(0,0);
-        }
-
-        function openTab(tab){
-            document.querySelectorAll('.content').forEach(c=>c.classList.remove('active'));
-            document.getElementById(tab).classList.add('active');
-            document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
-            event.target.classList.add('active');
-        }
-    </script>
 </div>
 
 <script>
-// 地圖 + 點卡片飛過去（第一頁籤）
+// 切換頁籤
+function openTab(tab){
+    document.querySelectorAll('.content').forEach(c=>c.classList.remove('active'));
+    document.getElementById(tab).classList.add('active');
+    document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
+    event.target.classList.add('active');
+}
+
+// 顯示詳細內容
+function showDetail(day){
+    const content = {
+        1: `<div class="detail-day"><h2>Day 1｜抵達＋電視塔夜景</h2>
+             <div class="step">新千歲機場 → JR快速Airport 特急（37分鐘 ¥1,150）→ 札幌站</div>
+             <div class="step">札幌站 → 步行6分鐘（500m）→ 大通公園</div>
+             <div class="step">大通公園 → 步行3分鐘 → 札幌電視塔（門票¥1,200）</div>
+             <div class="distance">全天步行距離約 2.5 km · 非常輕鬆</div></div>`,
+
+        2: `<div class="detail-day"><h2>Day 2｜小樽運河</h2>
+             <div class="step">札幌站 08:30 → JR快速AirPort（35分鐘 ¥750）→ 小樽站</div>
+             <div class="step">小樽站 → 步行10分鐘 → 運河主區</div>
+             <div class="step">運河 → 北一硝子 → 音樂盒博物館 → LeTAO 本店</div>
+             <div class="step">18:00 前回程 JR（35分鐘）</div>
+             <div class="distance">小樽市內步行約 4–5 km · 建議穿防滑鞋</div></div>`,
+
+        3: `<div class="detail-day"><h2>Day 3｜啤酒博物館＋狸小路</h2>
+             <div class="step">札幌站 → 地鐵東豐線（6站 ¥290）→ 榮町站 → 步行10分鐘 → 啤酒博物館</div>
+             <div class="step">博物館內試飲＋成吉思汗午餐</div>
+             <div class="step">博物館 → 地鐵（8站）→ 大通 → 狸小路血拼</div>
+             <div class="distance">全天步行約 6 km</div></div>`,
+
+        4: `<div class="detail-day"><h2>Day 4｜藻岩山夜景</h2>
+             <div class="step">札幌市電「ロープウェイ入口」→ 免費接駁巴士（每20分）→ 纜車站</div>
+             <div class="step">纜車＋迷你纜車來回 ¥2,100</div>
+             <div class="step">夜景後可直達定山溪（計程車或包車）</div>
+             <div class="distance">市區步行極少，主要靠交通工具</div></div>`,
+
+        5: `<div class="detail-day"><h2>Day 5｜定山溪溫泉</h2>
+             <div class="step">札幌站巴士中心 09:30 → かっぱライナー（60分 ¥1,800）→ 定山溪</div>
+             <div class="step">溫泉街散步、足湯、紅葉峽</div>
+             <div class="step">可選日歸或住宿（推薦住一晚）</div>
+             <div class="distance">溫泉街步行 2–3 km · 超放鬆</div></div>`,
+
+        6: `<div class="detail-day"><h2>Day 6｜2026雪祭開幕日全天狂歡！</h2>
+             <div class="step">10:00 大通會場 1–12丁目（巨型雪像全部亮燈）</div>
+             <div class="step">13:00 地鐵＋步行 → Tsudome 會場玩雪滑梯</div>
+             <div class="step">17:00 地鐵2站 → 薄野冰雕會場</div>
+             <div class="step">18:30 回大通拍投影秀（最美！）</div>
+             <div class="distance">全天步行 8–10 km · 必穿雪靴＋暖包</div></div>`,
+
+        7: `<div class="detail-day"><h2>Day 7｜掃貨＋返程</h2>
+             <div class="step">早上 JR Tower T38 俯瞰雪祭全景</div>
+             <div class="step">Stellar Place → 大丸 → ESTA 瘋狂購物</div>
+             <div class="step">12:00 前退房 → JR快速（37分）→ 新千歲機場</div>
+             <div class="step">機場 Royce 巧克力＋Outlet 最後一波</div>
+             <div class="distance">市區步行約 4 km + 機場逛街</div></div>`
+    };
+    document.getElementById('detail-content').innerHTML = content[day];
+    openTab('details'); // 自動跳到詳細頁籤
+}
+
+// 地圖點卡片飛過去（依然保留）
 const map = L.map('map').setView([43.062, 141.354], 11);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+const dayCenters = [[43.0686,141.3508],[43.198,140.994],[43.070,141.367],[43.031,141.302],[42.997,141.192],[43.0554,141.353],[43.0628,141.3544]];
+dayCenters.forEach((c,i)=>L.marker(c).addTo(map).bindPopup(`<b>Day ${i+1}</b>`));
 
-const markers = {
-    1: L.marker([43.0686,141.3508]).addTo(map).bindPopup("<b>Day 1 札幌站・電視塔</b>"),
-    2: L.marker([43.198,140.994]).addTo(map).bindPopup("<b>Day 2 小樽運河</b>"),
-    3: L.marker([43.070,141.367]).addTo(map).bindPopup("<b>Day 3 啤酒博物館</b>"),
-    4: L.marker([43.031,141.302]).addTo(map).bindPopup("<b>Day 4 藻岩山</b>"),
-    5: L.marker([42.997,141.192]).addTo(map).bindPopup("<b>Day 5 定山溪</b>"),
-    6: L.marker([43.0554,141.353]).addTo(map).bindPopup("<b>Day 6 雪祭大通會場</b>"),
-    7: L.marker([43.0628,141.3544]).addTo(map).bindPopup("<b>Day 7 札幌站</b>")
-};
-
-document.querySelectorAll('.day').forEach((day, i) => {
-    const idx = i+1;
-    day.addEventListener('click', () => {
-        const center = day.getAttribute('data-center').split(',');
-        map.flyTo([center[0], center[1]], day.getAttribute('data-zoom'), {duration:1.5});
-        Object.values(markers).forEach(m=>m.setOpacity(0.4));
-        markers[idx].setOpacity(1).openPopup();
-    });
+// 點整個卡片也會飛地圖（雙重保險）
+document.querySelectorAll('.day').forEach((d,i)=>{
+    d.addEventListener('click',()=>{ if(event.target.tagName!=='BUTTON') {
+        map.flyTo(dayCenters[i], i===5?16:14, {duration:1.5});
+    }});
 });
 
 // 預算
