--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-HK">
 <head>
 <meta charset="UTF-8">
-<title>2026 札幌雪祭｜最專業終極版（HK$）</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>2026 札幌雪祭｜調整版行程（HK$）</title>
 <style>
     body{margin:0;font-family:"Playfair Display",serif;background:#FFFFF0;color:#333;}
     .header{background:linear-gradient(135deg,#4682B4,#FFD700);color:white;padding:3rem 1rem;text-align:center;}
@@ -23,13 +24,15 @@
     .time{color:#c0392b;font-weight:bold;font-size:1.2rem;}
     .meal{font-weight:bold;color:#B8860B;}
     .links a{margin:0.6rem 1rem 0.6rem 0;display:inline-block;background:#e3f2fd;padding:0.9rem 1.5rem;border-radius:12px;font-weight:600;}
+    .distance{color:#e74c3c;font-weight:bold;font-size:1.3rem;}
+    .highlight{background:#ffebee;padding:2rem;border-radius:15px;margin:2rem 0;text-align:center;font-size:1.4rem;}
 </style>
 </head>
 <body>
 
 <div class="header">
-    <h1>2026 札幌雪祭 7 天完美行程</h1>
-    <p style="font-size:1.5rem;">1月30日 – 2月5日　｜　金額以 HK$ Hong Kong Dollar 顯示</p>
+    <h1>2026 札幌雪祭 7 天完美行程（調整版）</h1>
+    <p style="font-size:1.5rem;">1月30日 – 2月5日　｜　Day 2/3 改滑雪板（Teine Ski Resort推薦）</p>
 </div>
 
 <div class="tabs">
@@ -37,35 +40,38 @@
     <div class="tab-btn" onclick="openTab('details')">詳細日程表</div>
 </div>
 
-<!-- 總覽頁（超乾淨，只留下午茶） -->
+<!-- 總覽頁（無午晚餐，只有 Day 5 下午茶 LeTAO） -->
 <div id="overview" class="content active">
     <div style="max-width:900px;margin:0 auto;">
 
-        <div class="day"><h2>1月30日 (五)　Day 1　抵達＋電視塔夜景</h2><button class="big-btn" onclick="showDetail(1)">查看完整時間軸</button></div>
+        <div class="day"><h2>1月30日 (五) Day 1　抵達＋電視塔夜景</h2><button class="big-btn" onclick="showDetail(1)">查看完整時間軸</button></div>
 
-        <div class="day">
-            <h2>1月31日 (六)　Day 2　小樽運河浪漫一日</h2>
-            <p class="note">下午茶：LeTAO 本店雙層起司蛋糕（必排隊！）</p>
-            <button class="big-btn" onclick="showDetail(2)">查看完整時間軸</button>
+        <div class="day"><h2>1月31日 (六) Day 2　Teine Ski Resort 滑雪板一日</h2><button class="big-btn" onclick="showDetail(2)">查看完整時間軸</button></div>
+
+        <div class="day"><h2>2月1日 (日) Day 3　Teine Ski Resort 滑雪板一日</h2><button class="big-btn" onclick="showDetail(3)">查看完整時間軸</button></div>
+
+        <div class="day"><h2>2月2日 (一) Day 4　定山溪溫泉放空</h2><button class="big-btn" onclick="showDetail(4)">查看完整時間軸</button></div>
+
+        <div class="day"><h2>2月3日 (二) Day 5　小樽運河浪漫一日</h2>
+            <p class="note">下午茶：LeTAO 本店雙層起司蛋糕（必吃！）</p>
+            <button class="big-btn" onclick="showDetail(5)">查看完整時間軸</button>
         </div>
 
-        <div class="day"><h2>2月1日 (日)　Day 3　啤酒博物館＋狸小路</h2><button class="big-btn" onclick="showDetail(3)">查看完整時間軸</button></div>
-        <div class="day"><h2>2月2日 (一)　Day 4　藻岩山夜景</h2><button class="big-btn" onclick="showDetail(4)">查看完整時間軸</button></div>
-        <div class="day"><h2>2月3日 (二)　Day 5　定山溪溫泉</h2><button class="big-btn" onclick="showDetail(5)">查看完整時間軸</button></div>
-        <div class="day" style="border-left:16px solid #e74c3c;"><h2>2月4日 (三)　Day 6　2026雪祭開幕日</h2><button class="big-btn" style="background:#e74c3c;color:white;" onclick="showDetail(6)">立即查看雪祭時間軸</button></div>
-        <div class="day"><h2>2月5日 (四)　Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">查看完整時間軸</button></div>
+        <div class="day" style="border-left:16px solid #e74c3c;"><h2>2月4日 (三) Day 6　2026雪祭開幕日全天狂歡！</h2><button class="big-btn" style="background:#e74c3c;color:white;" onclick="showDetail(6)">立即查看雪祭時間軸</button></div>
+
+        <div class="day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">查看完整時間軸</button></div>
 
     </div>
 
     <div style="text-align:center;margin:4rem;">
-        <h2>2026 雪祭7天總預算（HK$）</h2>
+        <h2>2026 雪祭7天總預算（HK$ Hong Kong Dollar）</h2>
         人數 <input type="number" id="p" value="2" min="1" style="padding:0.8rem;width:100px;">
         <button onclick="calc()" style="background:#FFD700;padding:1rem 2.5rem;border:none;border-radius:12px;margin-left:1rem;font-size:1.3rem;cursor:pointer;">計算</button>
         <p id="out" style="font-size:3.5rem;margin:2rem;font-weight:bold;color:#c0392b;">HK$13,800（2人）</p>
     </div>
 </div>
 
-<!-- 詳細日程表（嚴格時間順序 + 午餐/下午茶/晚餐時段） -->
+<!-- 詳細日程表（時間順序 + 官網 + 餐廳 Tabelog + Google Maps） -->
 <div id="details" class="content">
     <div id="detail-content" style="max-width:1000px;margin:0 auto;">
         <h2 style="text-align:center;padding:5rem;color:#95a5a6;">點左邊金色按鈕查看詳細時間軸</h2>
@@ -82,51 +88,66 @@ function openTab(tab){
 
 function showDetail(day){
     const details = {
-        1: `<div class="detail-day"><h2>1月30日 (五)　Day 1</h2>
-             <div class="step"><span class="time">14:00 – 15:30</span>　新千歲機場 → JR快速Airport → 札幌站</div>
-             <div class="step"><span class="time">16:00 – 18:00</span>　Check-in + 步行至大通公園</div>
+        1: `<div class="detail-day"><h2>1月30日 (五) Day 1　抵達＋電視塔夜景</h2>
+             <div class="step"><span class="time">14:00 – 15:30</span>　新千歲機場 → JR快速Airport 37分 HK$70 → 札幌站</div>
+             <div class="step"><span class="time">15:30 – 18:00</span>　Check-in + 步行至大通公園</div>
+             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：機場內 Royce 生巧克力或拉麵</span></div>
              <div class="step"><span class="time">18:30 – 20:00</span>　<span class="meal">晚餐：湯咖喱 Garaku 總店</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010103/1057998/" target="_blank">Tabelog 連結</a> ｜ HK$110–150</div>
-             <div class="step"><span class="time">20:30 – 22:00</span>　札幌電視塔夜景</div>
-             <div class="links"><a href="https://www.google.com/maps/dir/New+Chitose+Airport/Sapporo+TV+Tower" target="_blank">Google Maps 全程路線</a></div></div>`,
+             <div class="step"><span class="time">20:00 – 22:00</span>　<a href="https://www.tv-tower.co.jp/en/" target="_blank">札幌電視塔夜景</a></div>
+             <div class="links"><a href="https://www.google.com/maps/dir/New+Chitose+Airport/Sapporo+TV+Tower" target="_blank">Google Maps 全程路線</a></div>
+             <div class="distance">全天步行約 2.5 km</div></div>`,
 
-        2: `<div class="detail-day"><h2>1月31日 (六)　Day 2　小樽</h2>
-             <div class="step"><span class="time">08:30 – 09:05</span>　札幌站 → JR快速 → 小樽站</div>
-             <div class="step"><span class="time">09:15 – 12:30</span>　運河散策 + 北一硝子</div>
-             <div class="step"><span class="time">12:45 – 14:00</span>　<span class="meal">午餐：政壽司 本店</span><br><a href="https://tabelog.com/en/hokkaido/A0106/A010601/1000001/" target="_blank">Tabelog</a> ｜ HK$200–300</div>
-             <div class="step"><span class="time">14:30 – 16:00</span>　<span class="meal">下午茶：LeTAO 本店雙層起司蛋糕（必吃！）</span><br><a href="https://www.letao.jp/en/" target="_blank">LeTAO 官網</a></div>
-             <div class="step"><span class="time">16:30 – 18:30</span>　音樂盒博物館 + 自由購物</div>
-             <div class="step"><span class="time">19:00 – 20:30</span>　<span class="meal">晚餐：札幌拉麵共和國</span></div>
-             <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Canal" target="_blank">Google Maps 路線</a></div></div>`,
+        2: `<div class="detail-day"><h2>1月31日 (六) Day 2　Teine Ski Resort 滑雪板一日</h2>
+             <div class="step"><span class="time">08:00 – 09:00</span>　札幌市內搭巴士或計程車 → Teine Ski Resort（40分 HK$50–100）</div>
+             <div class="step"><span class="time">09:30 – 12:30</span>　租裝備 + 初學雪板課程（適合初學者）</div>
+             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：場內餐廳熱湯或漢堡</span></div>
+             <div class="step"><span class="time">14:00 – 17:00</span>　自由滑雪板（粉雪超讚）</div>
+             <div class="step"><span class="time">18:00 – 19:30</span>　<span class="meal">晚餐：回市區吃拉麵</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010101/1055555/" target="_blank">Tabelog 連結</a></div>
+             <div class="links"><a href="https://teine.sapporo-teine.com/snow/lang/en/" target="_blank">Teine Ski Resort 官網</a> ｜ <a href="https://www.google.com/maps/dir/Sapporo+Station/Sapporo+Teine+Ski+Resort" target="_blank">Google Maps 路線</a></div>
+             <div class="distance">場內步行少，主要滑雪</div></div>`,
 
-        3: `<div class="detail-day"><h2>2月1日 (日)　Day 3　啤酒博物館＋狸小路</h2>
-             <div class="step"><span class="time">10:00 – 12:30</span>　札幌啤酒博物館導覽</div>
-             <div class="step"><span class="time">12:45 – 14:30</span>　<span class="meal">午餐：館內成吉思汗吃到飽</span> HK$200</div>
-             <div class="step"><span class="time">15:00 – 18:00</span>　狸小路 + 藥妝血拼</div>
-             <div class="step"><span class="time">18:30 – 20:30</span>　<span class="meal">晚餐：Daruma 5.4 本店</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010202/1000002/" target="_blank">Tabelog</a> HK$250</div>
-             <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Sapporo+Beer+Museum" target="_blank">Google Maps</a></div></div>`,
+        3: `<div class="detail-day"><h2>2月1日 (日) Day 3　Teine Ski Resort 滑雪板一日</h2>
+             <div class="step"><span class="time">08:00 – 09:00</span>　札幌市內搭巴士 → Teine Ski Resort</div>
+             <div class="step"><span class="time">09:30 – 12:30</span>　進階雪板練習或自由滑</div>
+             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：場內熱湯咖哩</span></div>
+             <div class="step"><span class="time">14:00 – 17:00</span>　探索不同坡道</div>
+             <div class="step"><span class="time">18:00 – 19:30</span>　<span class="meal">晚餐：市區成吉思汗烤羊</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010202/1000002/" target="_blank">Tabelog 連結</a></div>
+             <div class="links"><a href="https://teine.sapporo-teine.com/snow/lang/en/" target="_blank">Teine Ski Resort 官網</a> ｜ <a href="https://www.google.com/maps/dir/Sapporo+Station/Sapporo+Teine+Ski+Resort" target="_blank">Google Maps 路線</a></div>
+             <div class="distance">場內步行少，主要滑雪</div></div>`,
 
-        4: `<div class="detail-day"><h2>2月2日 (一)　Day 4　藻岩山夜景</h2>
-             <div class="step"><span class="time">13:00 – 15:30</span>　市電＋接駁巴士 → 藻岩山纜車</div>
-             <div class="step"><span class="time">12:00 – 13:30</span>　<span class="meal">午餐：大通附近海鮮丼</span></div>
-             <div class="step"><span class="time">18:00 – 20:30</span>　<span class="meal">晚餐：かに本家 螃蟹吃到飽</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010101/1001355/" target="_blank">Tabelog</a> HK$500–650</div>
-             <div class="links"><a href="https://mt-moiwa.jp/en/" target="_blank">藻岩山官網</a> ｜ <a href="https://www.google.com/maps/dir/Sapporo+Station/Mount+Moiwa" target="_blank">Google Maps</a></div></div>`,
+        4: `<div class="detail-day"><h2>2月2日 (一) Day 4　定山溪溫泉放空</h2>
+             <div class="step"><span class="time">09:30 – 10:30</span>　札幌站搭巴士 HK$110 → 定山溪</div>
+             <div class="step"><span class="time">11:00 – 12:30</span>　溫泉街散策 + 足湯</div>
+             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：鹿肉蕎麥麵</span></div>
+             <div class="step"><span class="time">14:30 – 18:00</span>　日歸溫泉泡湯</div>
+             <div class="step"><span class="time">18:30 – 20:30</span>　<span class="meal">晚餐：懷石料理（若住宿已含）</span></div>
+             <div class="links"><a href="https://jozankei.jp/en/" target="_blank">定山溪官網</a> ｜ <a href="https://www.google.com/maps/dir/Sapporo+Station/Jozankei+Onsen" target="_blank">Google Maps 路線</a></div>
+             <div class="distance">步行 2–3 km</div></div>`,
 
-        5: `<div class="detail-day"><h2>2月3日 (二)　Day 5　定山溪溫泉</h2>
-             <div class="step"><span class="time">09:30 – 10:30</span>　札幌站搭かっぱライナー → 定山溪</div>
-             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：街內鹿肉蕎麥麵或湯咖喱</span></div>
-             <div class="step"><span class="time">18:30 – 20:30</span>　<span class="meal">晚餐：溫泉旅館懷石料理（住宿已含）</span></div>
-             <div class="links"><a href="https://jozankei.jp/en/" target="_blank">定山溪官網</a> ｜ <a href="https://www.google.com/maps/dir/Sapporo+Station/Jozankei+Onsen" target="_blank">Google Maps</a></div></div>`,
+        5: `<div class="detail-day"><h2>2月3日 (二) Day 5　小樽運河浪漫一日</h2>
+             <div class="step"><span class="time">08:30 – 09:05</span>　札幌站 JR快速 HK$45 → 小樽站</div>
+             <div class="step"><span class="time">09:15 – 12:30</span>　<a href="https://www.otaru.gr.jp/en" target="_blank">運河散策</a> + 北一硝子</div>
+             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：政壽司 本店</span><br><a href="https://tabelog.com/en/hokkaido/A0106/A010601/1000001/" target="_blank">Tabelog</a> HK$200–300</div>
+             <div class="step"><span class="time">14:30 – 16:00</span>　<span class="meal">下午茶：LeTAO 本店雙層起司蛋糕</span><br><a href="https://www.letao.jp/en/" target="_blank">LeTAO 官網</a></div>
+             <div class="step"><span class="time">16:30 – 18:30</span>　音樂盒博物館 + 購物</div>
+             <div class="step"><span class="time">19:00 – 20:30</span>　<span class="meal">晚餐：札幌拉麵共和國</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010101/1055555/" target="_blank">Tabelog</a></div>
+             <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Canal" target="_blank">Google Maps 路線</a></div>
+             <div class="distance">步行 4–5 km</div></div>`,
 
-        6: `<div class="detail-day"><h2>2月4日 (三)　Day 6　雪祭開幕日</h2>
-             <div class="step"><span class="time">10:00 – 16:00</span>　大通會場 + Tsudome 雪滑梯</div>
-             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：會場內海鮮丼或成吉思汗攤檔</span></div>
-             <div class="step"><span class="time">17:30 – 20:30</span>　薄野冰雕 → 回大通拍投影秀</div>
-             <div class="step"><span class="time">19:00 – 21:00</span>　<span class="meal">晚餐：蟹本家 薄野本店</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010203/1000089/" target="_blank">Tabelog</a></div>
-             <div class="links"><a href="https://www.snowfes.com/en/" target="_blank">雪祭官網</a> ｜ <a href="https://www.google.com/maps/place/Odori+Park" target="_blank">Google Maps 大通會場</a></div></div>`,
+        6: `<div class="detail-day"><h2>2月4日 (三) Day 6　2026雪祭開幕日</h2>
+             <div class="step"><span class="time">10:00 – 12:30</span>　<a href="https://www.snowfes.com/en/" target="_blank">大通會場散策</a></div>
+             <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：會場海鮮丼攤檔</span></div>
+             <div class="step"><span class="time">14:00 – 17:00</span>　Tsudome 雪滑梯</div>
+             <div class="step"><span class="time">17:00 – 19:00</span>　薄野冰雕會場</div>
+             <div class="step"><span class="time">19:00 – 20:30</span>　<span class="meal">晚餐：蟹本家 薄野本店</span><br><a href="https://tabelog.com/en/hokkaido/A0101/A010203/1000089/" target="_blank">Tabelog</a></div>
+             <div class="step"><span class="time">20:30 – 22:00</span>　回大通拍投影秀</div>
+             <div class="links"><a href="https://www.google.com/maps/place/Odori+Park" target="_blank">Google Maps 大通會場</a></div>
+             <div class="distance">步行 8–10 km</div></div>`,
 
-        7: `<div class="detail-day"><h2>2月5日 (四)　Day 7　掃貨＋返程</h2>
-             <div class="step"><span class="time">09:00 – 11:30</span>　JR Tower T38 + 百貨掃貨</div>
+        7: `<div class="detail-day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2>
+             <div class="step"><span class="time">08:00 – 11:30</span>　<a href="https://www.jr-tower.com/en/t38" target="_blank">JR Tower T38</a> + 百貨購物</div>
              <div class="step"><span class="time">12:00 – 13:30</span>　<span class="meal">午餐：新千歲機場拉麵道場</span><br><a href="https://www.new-chitose-airport.jp/en/food/ramen-dojo/" target="_blank">官網</a></div>
+             <div class="step"><span class="time">13:30 – 航班前</span>　機場 Royce + Outlet 掃貨</div>
              <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/New+Chitose+Airport" target="_blank">Google Maps 路線</a></div></div>`
     };
     document.getElementById('detail-content').innerHTML = details[day];
