--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ function showDetail(day){
              <div class="step"><span class="time">12:30 – 14:00</span>　<span class="meal">午餐：政壽司 本店</span><br><a href="https://tabelog.com/en/hokkaido/A0106/A010601/1000001/" target="_blank">Tabelog</a> HK$200–300</div>
              <div class="step"><span class="time">14:30 – 16:00</span>　<span class="meal">下午茶：LeTAO 本店雙層起司蛋糕</span><br><a href="https://www.letao.jp/en/" target="_blank">LeTAO 官網</a></div>
              <div class="step"><span class="time">16:30 – 18:30</span>　音樂盒博物館 + 購物</div>
-             <div class="step"><span class="time">19:00 – 20:30</span>　<span class="meal">晚餐：小樽世壳屋</span><br><a href="https://yoichiya.info/" target="_blank">Tabelog</a></div>
+             <div class="step"><span class="time">19:00 – 20:30</span>　<span class="meal">晚餐：小樽世壳屋</span><br><a href="https://tabelog.com/tw/hokkaido/A0106/A010601/1070911/" target="_blank">Tabelog</a></div>
              <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Canal" target="_blank">Google Maps 路線</a></div>
              <div class="distance">步行 4–5 km</div></div>`,
 
